<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>Descrierea pachetului robot_description</description>
  <maintainer email="ovidiuradu93@gmail.com">ovidiu</maintainer>
  <license>BSD</license>

  <!-- Dependențe necesare -->
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>gazebo_ros2</depend>
  <depend>gazebo_ros2_control_plugins</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <!-- Dependențe pentru testare -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
